Fixed prior mistakes

--- a/MonteCarloMethods/q_learning.ipynb
+++ b/MonteCarloMethods/q_learning.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# On-policy Temporal Difference Learning (SARSA)"
+    "# Off-policy Temporal Difference Learning (Q-Learning)"
    ]
   },
   {
@@ -75,10 +75,12 @@
     "    \n",
     "    return action_probabilities\n",
     "\n",
-    "def update_params(Q, state, action, reward, s_next, alpha, gamma, e) -> None: \n",
+    "def update_params(Q, state, action, reward, s_next, alpha, gamma) -> None: \n",
     "    old_val = Q[state, action]\n",
-    "    pi = policy_fn(Q, action_space.n, e, state)\n",
-    "    a_next = np.random.choice(np.arange(action_space.n), p = pi)\n",
+    "    #the following step is the difference between Q-learning and SARSA \n",
+    "    #instead of updating based on the action the policy would pick, we \n",
+    "    #update based on the best action value possible \n",
+    "    a_next = np.max(Q[s_next])\n",
     "    new_val = old_val + alpha * (reward + gamma * a_next - old_val)\n",
     "    Q[state, action] = new_val"
    ]
@@ -94,8 +96,6 @@
     "returns = [[[]]*action_space.n for i in range(state_space.n)]\n",
     "pi = np.zeros((state_space.n, action_space.n))\n",
     "epochs_per_episode = []\n",
-    "action_prev = 0 \n",
-    "state_prev = 0 \n",
     "\n",
     "#hyperparams \n",
     "num_episodes = 600\n",
@@ -106,9 +106,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode: 0 Epoch: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aryaman.pandya/ml_accel/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode: 0 Epoch: 544\n",
+      "Episode: 1 Epoch: 0\n",
+      "Episode: 1 Epoch: 701\n",
+      "Episode: 2 Epoch: 0\n",
+      "Episode: 2 Epoch: 802\n",
+      "Episode: 3 Epoch: 0\n",
+      "Episode: 3 Epoch: 520\n",
+      "Episode: 4 Epoch: 0\n",
+      "Episode: 4 Epoch: 945\n",
+      "Episode: 5 Epoch: 0\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(num_episodes):\n",
     "    \n",
@@ -120,7 +152,7 @@
     "    print(\"Episode: {} Epoch: {}\".format(i, epoch))\n",
     "    \n",
     "    while not terminated: \n",
-    "\n",
+    "        \n",
     "        epoch+=1\n",
     "        if type(state)==tuple: \n",
     "            state = state[0]\n",
@@ -129,15 +161,9 @@
     "        action = np.random.choice(np.arange(action_space.n), p = pi[state])\n",
     "        \n",
     "        next_state, reward, terminated, truncated, step_dict = env.step(action)\n",
-    "         \n",
     "        episode.append((state, action, reward))\n",
     "        \n",
-    "        if epoch == 1: \n",
-    "            action_prev = action\n",
-    "            continue \n",
-    "        \n",
-    "        \n",
-    "        update_params(Q, state, action, reward, next_state, alpha, gamma, e)\n",
+    "        update_params(Q, state, action, reward, next_state, alpha, gamma)\n",
     "        \n",
     "        if terminated: \n",
     "            print(\"Episode: {} Epoch: {}\".format(i, epoch))\n",
@@ -210,6 +236,7 @@
     "        if type(state)==tuple: \n",
     "            state = state[0]\n",
     "        \n",
+    "        #time.sleep(0.03)\n",
     "        pi[state] = policy_fn(Q, action_space.n, e, state)\n",
     "        action = np.random.choice(np.arange(action_space.n), p = pi[state])\n",
     "        print(state)\n",
