eligibility traces performing poorly

--- a/TDLearning/eligibility_traces.ipynb
+++ b/TDLearning/eligibility_traces.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"Taxi-v3\", render_mode = \"human\")\n",
+    "env = gym.make('Taxi-v3', render_mode = 'human')\n",
     "env.reset()\n",
     "env.render()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,10 +77,10 @@
     "\n",
     "#hyperparams \n",
     "num_episodes = 500\n",
-    "epsilon = 0.1\n",
+    "epsilon = 0.2\n",
     "gamma = 1\n",
     "alpha = 0.1\n",
-    "lamda = 0.6 "
+    "lamda = 0.4"
    ]
   },
   {
@@ -93,34 +93,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode: 0 Epoch: 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/aryaman.pandya/ml_accel/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
-      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+      "Episode: 0 Epoch: 0\n",
+      "Episode: 0 Epoch: 661\n",
+      "Episode: 1 Epoch: 0\n",
+      "Episode: 1 Epoch: 1283\n",
+      "Episode: 2 Epoch: 0\n",
+      "Episode: 2 Epoch: 1940\n",
+      "Episode: 3 Epoch: 0\n",
+      "Episode: 3 Epoch: 931\n",
+      "Episode: 4 Epoch: 0\n",
+      "Episode: 4 Epoch: 343\n",
+      "Episode: 5 Epoch: 0\n",
+      "Episode: 5 Epoch: 595\n",
+      "Episode: 6 Epoch: 0\n",
+      "Episode: 6 Epoch: 2252\n",
+      "Episode: 7 Epoch: 0\n",
+      "Episode: 7 Epoch: 884\n",
+      "Episode: 8 Epoch: 0\n",
+      "Episode: 8 Epoch: 2965\n",
+      "Episode: 9 Epoch: 0\n",
+      "Episode: 9 Epoch: 1019\n",
+      "Episode: 10 Epoch: 0\n",
+      "Episode: 10 Epoch: 4331\n",
+      "Episode: 11 Epoch: 0\n",
+      "Episode: 11 Epoch: 1647\n",
+      "Episode: 12 Epoch: 0\n",
+      "Episode: 12 Epoch: 676\n",
+      "Episode: 13 Epoch: 0\n",
+      "Episode: 13 Epoch: 3649\n",
+      "Episode: 14 Epoch: 0\n",
+      "Episode: 14 Epoch: 1628\n",
+      "Episode: 15 Epoch: 0\n",
+      "Episode: 15 Epoch: 890\n",
+      "Episode: 16 Epoch: 0\n",
+      "Episode: 16 Epoch: 143\n",
+      "Episode: 17 Epoch: 0\n",
+      "Episode: 17 Epoch: 852\n",
+      "Episode: 18 Epoch: 0\n",
+      "Episode: 18 Epoch: 1387\n",
+      "Episode: 19 Epoch: 0\n",
+      "Episode: 19 Epoch: 3487\n",
+      "Episode: 20 Epoch: 0\n",
+      "Episode: 20 Epoch: 112\n",
+      "Episode: 21 Epoch: 0\n",
+      "Episode: 21 Epoch: 220\n",
+      "Episode: 22 Epoch: 0\n",
+      "Episode: 22 Epoch: 2812\n",
+      "Episode: 23 Epoch: 0\n",
+      "Episode: 23 Epoch: 736\n",
+      "Episode: 24 Epoch: 0\n",
+      "Episode: 24 Epoch: 201\n",
+      "Episode: 25 Epoch: 0\n",
+      "Episode: 25 Epoch: 98\n",
+      "Episode: 26 Epoch: 0\n",
+      "Episode: 26 Epoch: 2210\n",
+      "Episode: 27 Epoch: 0\n",
+      "Episode: 27 Epoch: 1274\n",
+      "Episode: 28 Epoch: 0\n"
      ]
     }
    ],
    "source": [
+    "E = np.zeros((state_space.n, action_space.n))\n",
     "time_start = datetime.now().time()\n",
     "for i in range(num_episodes):\n",
-    "    E = np.zeros((state_space.n, action_space.n))\n",
-    "    episode = []\n",
-    "    state = env.reset()\n",
-    "    action = 0 \n",
+    "    \n",
     "    cumulative_reward = 0 \n",
     "    epoch = 0\n",
+    "    \n",
+    "    state = env.reset()\n",
+    "    if type(state)==tuple: \n",
+    "        state = state[0]\n",
+    "    pi[state] = policy_fn(Q, action_space.n, epsilon, state)\n",
+    "    action = np.random.choice(np.arange(action_space.n), p = pi[state])\n",
+    "    \n",
     "    terminated = False \n",
     "    print(\"Episode: {} Epoch: {}\".format(i, epoch))\n",
     "    \n",
@@ -135,16 +188,21 @@
     "        pi[state] = policy_fn(Q, action_space.n, epsilon, state)\n",
     "        next_action = np.random.choice(np.arange(action_space.n), p = pi[state])\n",
     "        \n",
+    "        if type(next_state)==tuple: \n",
+    "            next_state = next_state[0]\n",
+    "        \n",
     "        #calculate the temporal difference error for the predicted value of the state-action \n",
     "        #pair \n",
     "        td_error = reward + (gamma * Q[next_state][next_action]) - Q[state][action]\n",
-    "        E[state][action] = (1 - alpha)*(E[state][action]) + 1 # we use dutch eligibility traces \n",
     "        \n",
-    "        #Backup each state-action pair based on its TD error and eligibility trace\n",
-    "        for state in range(state_space.n): \n",
-    "            for action in range(action_space.n): \n",
-    "                Q[state][action] = Q[state][action] + (alpha * td_error * E[state][action])\n",
-    "                E[state][action] = lamda * gamma * E[state][action]\n",
+    "        # we use accumulating eligibility traces \n",
+    "        E[state][action] = (E[state][action]) + 1\n",
+    "        \n",
+    "        #Backup state-action pair based on its TD error and eligibility trace\n",
+    "        Q[state][action] = Q[state][action] + (alpha * td_error * E[state][action])\n",
+    "        \n",
+    "        #Decay all Eligibility traces\n",
+    "        E = lamda * gamma * E\n",
     "        \n",
     "        state = next_state\n",
     "        action = next_action\n",
@@ -202,6 +260,14 @@
     "plt.xlabel('Episode')\n",
     "plt.ylabel('Epoch')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From observing the learning process, it may seem that sarsa lambda is not the ideal choice in this scenario. The rate of convergence is far inferior to that of the off policy Q-learning method evaluated previously. This might be because this environment is not exactly sequential in nature. Rewards depend more on immediate action, which makes the idea of memory unnecessary. "
    ]
   }
  ],
