--- a/TDLearning/eligibility_traces.ipynb
+++ b/TDLearning/eligibility_traces.ipynb
@@ -267,7 +267,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From observing the learning process, it may seem that sarsa lambda is not the ideal choice in this scenario. The rate of convergence is far inferior to that of the off policy Q-learning method evaluated previously. This might be because this environment is not exactly sequential in nature. Rewards depend more on immediate action, which makes the idea of memory unnecessary. "
+    "From observing the learning process, it may seem that sarsa lambda is not the ideal choice in this scenario. The rate of convergence is far inferior to that of the off policy Q-learning method evaluated previously. \n",
+    "\n",
+    "On the other hand, this method seems to be outperforming the regular SARSA algorithm on this task. "
    ]
   }
  ],
