Analyzed eligibility trace results

--- a/TDLearning/eligibility_traces.ipynb
+++ b/TDLearning/eligibility_traces.ipynb
@@ -156,7 +156,429 @@
       "Episode: 26 Epoch: 2210\n",
       "Episode: 27 Epoch: 0\n",
       "Episode: 27 Epoch: 1274\n",
-      "Episode: 28 Epoch: 0\n"
+      "Episode: 28 Epoch: 0\n",
+      "Episode: 28 Epoch: 2383\n",
+      "Episode: 29 Epoch: 0\n",
+      "Episode: 29 Epoch: 542\n",
+      "Episode: 30 Epoch: 0\n",
+      "Episode: 30 Epoch: 689\n",
+      "Episode: 31 Epoch: 0\n",
+      "Episode: 31 Epoch: 729\n",
+      "Episode: 32 Epoch: 0\n",
+      "Episode: 32 Epoch: 1957\n",
+      "Episode: 33 Epoch: 0\n",
+      "Episode: 33 Epoch: 1736\n",
+      "Episode: 34 Epoch: 0\n",
+      "Episode: 34 Epoch: 1214\n",
+      "Episode: 35 Epoch: 0\n",
+      "Episode: 35 Epoch: 567\n",
+      "Episode: 36 Epoch: 0\n",
+      "Episode: 36 Epoch: 187\n",
+      "Episode: 37 Epoch: 0\n",
+      "Episode: 37 Epoch: 751\n",
+      "Episode: 38 Epoch: 0\n",
+      "Episode: 38 Epoch: 155\n",
+      "Episode: 39 Epoch: 0\n",
+      "Episode: 39 Epoch: 1115\n",
+      "Episode: 40 Epoch: 0\n",
+      "Episode: 40 Epoch: 684\n",
+      "Episode: 41 Epoch: 0\n",
+      "Episode: 41 Epoch: 362\n",
+      "Episode: 42 Epoch: 0\n",
+      "Episode: 42 Epoch: 391\n",
+      "Episode: 43 Epoch: 0\n",
+      "Episode: 43 Epoch: 751\n",
+      "Episode: 44 Epoch: 0\n",
+      "Episode: 44 Epoch: 190\n",
+      "Episode: 45 Epoch: 0\n",
+      "Episode: 45 Epoch: 182\n",
+      "Episode: 46 Epoch: 0\n",
+      "Episode: 46 Epoch: 1492\n",
+      "Episode: 47 Epoch: 0\n",
+      "Episode: 47 Epoch: 216\n",
+      "Episode: 48 Epoch: 0\n",
+      "Episode: 48 Epoch: 1338\n",
+      "Episode: 49 Epoch: 0\n",
+      "Episode: 49 Epoch: 549\n",
+      "Episode: 50 Epoch: 0\n",
+      "Episode: 50 Epoch: 509\n",
+      "Episode: 51 Epoch: 0\n",
+      "Episode: 51 Epoch: 449\n",
+      "Episode: 52 Epoch: 0\n",
+      "Episode: 52 Epoch: 267\n",
+      "Episode: 53 Epoch: 0\n",
+      "Episode: 53 Epoch: 5566\n",
+      "Episode: 54 Epoch: 0\n",
+      "Episode: 54 Epoch: 144\n",
+      "Episode: 55 Epoch: 0\n",
+      "Episode: 55 Epoch: 336\n",
+      "Episode: 56 Epoch: 0\n",
+      "Episode: 56 Epoch: 79\n",
+      "Episode: 57 Epoch: 0\n",
+      "Episode: 57 Epoch: 941\n",
+      "Episode: 58 Epoch: 0\n",
+      "Episode: 58 Epoch: 1560\n",
+      "Episode: 59 Epoch: 0\n",
+      "Episode: 59 Epoch: 489\n",
+      "Episode: 60 Epoch: 0\n",
+      "Episode: 60 Epoch: 5741\n",
+      "Episode: 61 Epoch: 0\n",
+      "Episode: 61 Epoch: 119\n",
+      "Episode: 62 Epoch: 0\n",
+      "Episode: 62 Epoch: 663\n",
+      "Episode: 63 Epoch: 0\n",
+      "Episode: 63 Epoch: 172\n",
+      "Episode: 64 Epoch: 0\n",
+      "Episode: 64 Epoch: 639\n",
+      "Episode: 65 Epoch: 0\n",
+      "Episode: 65 Epoch: 1879\n",
+      "Episode: 66 Epoch: 0\n",
+      "Episode: 66 Epoch: 596\n",
+      "Episode: 67 Epoch: 0\n",
+      "Episode: 67 Epoch: 1341\n",
+      "Episode: 68 Epoch: 0\n",
+      "Episode: 68 Epoch: 342\n",
+      "Episode: 69 Epoch: 0\n",
+      "Episode: 69 Epoch: 518\n",
+      "Episode: 70 Epoch: 0\n",
+      "Episode: 70 Epoch: 1175\n",
+      "Episode: 71 Epoch: 0\n",
+      "Episode: 71 Epoch: 641\n",
+      "Episode: 72 Epoch: 0\n",
+      "Episode: 72 Epoch: 657\n",
+      "Episode: 73 Epoch: 0\n",
+      "Episode: 73 Epoch: 200\n",
+      "Episode: 74 Epoch: 0\n",
+      "Episode: 74 Epoch: 113\n",
+      "Episode: 75 Epoch: 0\n",
+      "Episode: 75 Epoch: 80\n",
+      "Episode: 76 Epoch: 0\n",
+      "Episode: 76 Epoch: 1582\n",
+      "Episode: 77 Epoch: 0\n",
+      "Episode: 77 Epoch: 269\n",
+      "Episode: 78 Epoch: 0\n",
+      "Episode: 78 Epoch: 767\n",
+      "Episode: 79 Epoch: 0\n",
+      "Episode: 79 Epoch: 1041\n",
+      "Episode: 80 Epoch: 0\n",
+      "Episode: 80 Epoch: 764\n",
+      "Episode: 81 Epoch: 0\n",
+      "Episode: 81 Epoch: 109\n",
+      "Episode: 82 Epoch: 0\n",
+      "Episode: 82 Epoch: 98\n",
+      "Episode: 83 Epoch: 0\n",
+      "Episode: 83 Epoch: 298\n",
+      "Episode: 84 Epoch: 0\n",
+      "Episode: 84 Epoch: 1470\n",
+      "Episode: 85 Epoch: 0\n",
+      "Episode: 85 Epoch: 290\n",
+      "Episode: 86 Epoch: 0\n",
+      "Episode: 86 Epoch: 603\n",
+      "Episode: 87 Epoch: 0\n",
+      "Episode: 87 Epoch: 799\n",
+      "Episode: 88 Epoch: 0\n",
+      "Episode: 88 Epoch: 28\n",
+      "Episode: 89 Epoch: 0\n",
+      "Episode: 89 Epoch: 257\n",
+      "Episode: 90 Epoch: 0\n",
+      "Episode: 90 Epoch: 261\n",
+      "Episode: 91 Epoch: 0\n",
+      "Episode: 91 Epoch: 279\n",
+      "Episode: 92 Epoch: 0\n",
+      "Episode: 92 Epoch: 605\n",
+      "Episode: 93 Epoch: 0\n",
+      "Episode: 93 Epoch: 191\n",
+      "Episode: 94 Epoch: 0\n",
+      "Episode: 94 Epoch: 1057\n",
+      "Episode: 95 Epoch: 0\n",
+      "Episode: 95 Epoch: 28\n",
+      "Episode: 96 Epoch: 0\n",
+      "Episode: 96 Epoch: 274\n",
+      "Episode: 97 Epoch: 0\n",
+      "Episode: 97 Epoch: 1608\n",
+      "Episode: 98 Epoch: 0\n",
+      "Episode: 98 Epoch: 577\n",
+      "Episode: 99 Epoch: 0\n",
+      "Episode: 99 Epoch: 1065\n",
+      "Episode: 100 Epoch: 0\n",
+      "Episode: 100 Epoch: 477\n",
+      "Episode: 101 Epoch: 0\n",
+      "Episode: 101 Epoch: 1035\n",
+      "Episode: 102 Epoch: 0\n",
+      "Episode: 102 Epoch: 679\n",
+      "Episode: 103 Epoch: 0\n",
+      "Episode: 103 Epoch: 396\n",
+      "Episode: 104 Epoch: 0\n",
+      "Episode: 104 Epoch: 121\n",
+      "Episode: 105 Epoch: 0\n",
+      "Episode: 105 Epoch: 134\n",
+      "Episode: 106 Epoch: 0\n",
+      "Episode: 106 Epoch: 64\n",
+      "Episode: 107 Epoch: 0\n",
+      "Episode: 107 Epoch: 479\n",
+      "Episode: 108 Epoch: 0\n",
+      "Episode: 108 Epoch: 339\n",
+      "Episode: 109 Epoch: 0\n",
+      "Episode: 109 Epoch: 61\n",
+      "Episode: 110 Epoch: 0\n",
+      "Episode: 110 Epoch: 224\n",
+      "Episode: 111 Epoch: 0\n",
+      "Episode: 111 Epoch: 251\n",
+      "Episode: 112 Epoch: 0\n",
+      "Episode: 112 Epoch: 978\n",
+      "Episode: 113 Epoch: 0\n",
+      "Episode: 113 Epoch: 83\n",
+      "Episode: 114 Epoch: 0\n",
+      "Episode: 114 Epoch: 93\n",
+      "Episode: 115 Epoch: 0\n",
+      "Episode: 115 Epoch: 560\n",
+      "Episode: 116 Epoch: 0\n",
+      "Episode: 116 Epoch: 163\n",
+      "Episode: 117 Epoch: 0\n",
+      "Episode: 117 Epoch: 237\n",
+      "Episode: 118 Epoch: 0\n",
+      "Episode: 118 Epoch: 402\n",
+      "Episode: 119 Epoch: 0\n",
+      "Episode: 119 Epoch: 273\n",
+      "Episode: 120 Epoch: 0\n",
+      "Episode: 120 Epoch: 132\n",
+      "Episode: 121 Epoch: 0\n",
+      "Episode: 121 Epoch: 273\n",
+      "Episode: 122 Epoch: 0\n",
+      "Episode: 122 Epoch: 1169\n",
+      "Episode: 123 Epoch: 0\n",
+      "Episode: 123 Epoch: 931\n",
+      "Episode: 124 Epoch: 0\n",
+      "Episode: 124 Epoch: 268\n",
+      "Episode: 125 Epoch: 0\n",
+      "Episode: 125 Epoch: 97\n",
+      "Episode: 126 Epoch: 0\n",
+      "Episode: 126 Epoch: 660\n",
+      "Episode: 127 Epoch: 0\n",
+      "Episode: 127 Epoch: 219\n",
+      "Episode: 128 Epoch: 0\n",
+      "Episode: 128 Epoch: 594\n",
+      "Episode: 129 Epoch: 0\n",
+      "Episode: 129 Epoch: 247\n",
+      "Episode: 130 Epoch: 0\n",
+      "Episode: 130 Epoch: 483\n",
+      "Episode: 131 Epoch: 0\n",
+      "Episode: 131 Epoch: 150\n",
+      "Episode: 132 Epoch: 0\n",
+      "Episode: 132 Epoch: 22\n",
+      "Episode: 133 Epoch: 0\n",
+      "Episode: 133 Epoch: 1033\n",
+      "Episode: 134 Epoch: 0\n",
+      "Episode: 134 Epoch: 36\n",
+      "Episode: 135 Epoch: 0\n",
+      "Episode: 135 Epoch: 1009\n",
+      "Episode: 136 Epoch: 0\n",
+      "Episode: 136 Epoch: 262\n",
+      "Episode: 137 Epoch: 0\n",
+      "Episode: 137 Epoch: 16\n",
+      "Episode: 138 Epoch: 0\n",
+      "Episode: 138 Epoch: 356\n",
+      "Episode: 139 Epoch: 0\n",
+      "Episode: 139 Epoch: 82\n",
+      "Episode: 140 Epoch: 0\n",
+      "Episode: 140 Epoch: 122\n",
+      "Episode: 141 Epoch: 0\n",
+      "Episode: 141 Epoch: 580\n",
+      "Episode: 142 Epoch: 0\n",
+      "Episode: 142 Epoch: 73\n",
+      "Episode: 143 Epoch: 0\n",
+      "Episode: 143 Epoch: 41\n",
+      "Episode: 144 Epoch: 0\n",
+      "Episode: 144 Epoch: 383\n",
+      "Episode: 145 Epoch: 0\n",
+      "Episode: 145 Epoch: 98\n",
+      "Episode: 146 Epoch: 0\n",
+      "Episode: 146 Epoch: 2125\n",
+      "Episode: 147 Epoch: 0\n",
+      "Episode: 147 Epoch: 47\n",
+      "Episode: 148 Epoch: 0\n",
+      "Episode: 148 Epoch: 95\n",
+      "Episode: 149 Epoch: 0\n",
+      "Episode: 149 Epoch: 161\n",
+      "Episode: 150 Epoch: 0\n",
+      "Episode: 150 Epoch: 1534\n",
+      "Episode: 151 Epoch: 0\n",
+      "Episode: 151 Epoch: 132\n",
+      "Episode: 152 Epoch: 0\n",
+      "Episode: 152 Epoch: 490\n",
+      "Episode: 153 Epoch: 0\n",
+      "Episode: 153 Epoch: 243\n",
+      "Episode: 154 Epoch: 0\n",
+      "Episode: 154 Epoch: 174\n",
+      "Episode: 155 Epoch: 0\n",
+      "Episode: 155 Epoch: 174\n",
+      "Episode: 156 Epoch: 0\n",
+      "Episode: 156 Epoch: 105\n",
+      "Episode: 157 Epoch: 0\n",
+      "Episode: 157 Epoch: 85\n",
+      "Episode: 158 Epoch: 0\n",
+      "Episode: 158 Epoch: 663\n",
+      "Episode: 159 Epoch: 0\n",
+      "Episode: 159 Epoch: 191\n",
+      "Episode: 160 Epoch: 0\n",
+      "Episode: 160 Epoch: 88\n",
+      "Episode: 161 Epoch: 0\n",
+      "Episode: 161 Epoch: 109\n",
+      "Episode: 162 Epoch: 0\n",
+      "Episode: 162 Epoch: 396\n",
+      "Episode: 163 Epoch: 0\n",
+      "Episode: 163 Epoch: 820\n",
+      "Episode: 164 Epoch: 0\n",
+      "Episode: 164 Epoch: 150\n",
+      "Episode: 165 Epoch: 0\n",
+      "Episode: 165 Epoch: 1386\n",
+      "Episode: 166 Epoch: 0\n",
+      "Episode: 166 Epoch: 71\n",
+      "Episode: 167 Epoch: 0\n",
+      "Episode: 167 Epoch: 69\n",
+      "Episode: 168 Epoch: 0\n",
+      "Episode: 168 Epoch: 37\n",
+      "Episode: 169 Epoch: 0\n",
+      "Episode: 169 Epoch: 150\n",
+      "Episode: 170 Epoch: 0\n",
+      "Episode: 170 Epoch: 157\n",
+      "Episode: 171 Epoch: 0\n",
+      "Episode: 171 Epoch: 487\n",
+      "Episode: 172 Epoch: 0\n",
+      "Episode: 172 Epoch: 206\n",
+      "Episode: 173 Epoch: 0\n",
+      "Episode: 173 Epoch: 540\n",
+      "Episode: 174 Epoch: 0\n",
+      "Episode: 174 Epoch: 416\n",
+      "Episode: 175 Epoch: 0\n",
+      "Episode: 175 Epoch: 417\n",
+      "Episode: 176 Epoch: 0\n",
+      "Episode: 176 Epoch: 132\n",
+      "Episode: 177 Epoch: 0\n",
+      "Episode: 177 Epoch: 190\n",
+      "Episode: 178 Epoch: 0\n",
+      "Episode: 178 Epoch: 293\n",
+      "Episode: 179 Epoch: 0\n",
+      "Episode: 179 Epoch: 250\n",
+      "Episode: 180 Epoch: 0\n",
+      "Episode: 180 Epoch: 257\n",
+      "Episode: 181 Epoch: 0\n",
+      "Episode: 181 Epoch: 1302\n",
+      "Episode: 182 Epoch: 0\n",
+      "Episode: 182 Epoch: 216\n",
+      "Episode: 183 Epoch: 0\n",
+      "Episode: 183 Epoch: 1694\n",
+      "Episode: 184 Epoch: 0\n",
+      "Episode: 184 Epoch: 69\n",
+      "Episode: 185 Epoch: 0\n",
+      "Episode: 185 Epoch: 194\n",
+      "Episode: 186 Epoch: 0\n",
+      "Episode: 186 Epoch: 122\n",
+      "Episode: 187 Epoch: 0\n",
+      "Episode: 187 Epoch: 384\n",
+      "Episode: 188 Epoch: 0\n",
+      "Episode: 188 Epoch: 432\n",
+      "Episode: 189 Epoch: 0\n",
+      "Episode: 189 Epoch: 96\n",
+      "Episode: 190 Epoch: 0\n",
+      "Episode: 190 Epoch: 54\n",
+      "Episode: 191 Epoch: 0\n",
+      "Episode: 191 Epoch: 90\n",
+      "Episode: 192 Epoch: 0\n",
+      "Episode: 192 Epoch: 206\n",
+      "Episode: 193 Epoch: 0\n",
+      "Episode: 193 Epoch: 427\n",
+      "Episode: 194 Epoch: 0\n",
+      "Episode: 194 Epoch: 232\n",
+      "Episode: 195 Epoch: 0\n",
+      "Episode: 195 Epoch: 269\n",
+      "Episode: 196 Epoch: 0\n",
+      "Episode: 196 Epoch: 33\n",
+      "Episode: 197 Epoch: 0\n",
+      "Episode: 197 Epoch: 329\n",
+      "Episode: 198 Epoch: 0\n",
+      "Episode: 198 Epoch: 59\n",
+      "Episode: 199 Epoch: 0\n",
+      "Episode: 199 Epoch: 352\n",
+      "Episode: 200 Epoch: 0\n",
+      "Episode: 200 Epoch: 151\n",
+      "Episode: 201 Epoch: 0\n",
+      "Episode: 201 Epoch: 2170\n",
+      "Episode: 202 Epoch: 0\n",
+      "Episode: 202 Epoch: 424\n",
+      "Episode: 203 Epoch: 0\n",
+      "Episode: 203 Epoch: 772\n",
+      "Episode: 204 Epoch: 0\n",
+      "Episode: 204 Epoch: 29\n",
+      "Episode: 205 Epoch: 0\n",
+      "Episode: 205 Epoch: 54\n",
+      "Episode: 206 Epoch: 0\n",
+      "Episode: 206 Epoch: 397\n",
+      "Episode: 207 Epoch: 0\n",
+      "Episode: 207 Epoch: 117\n",
+      "Episode: 208 Epoch: 0\n",
+      "Episode: 208 Epoch: 1733\n",
+      "Episode: 209 Epoch: 0\n",
+      "Episode: 209 Epoch: 324\n",
+      "Episode: 210 Epoch: 0\n",
+      "Episode: 210 Epoch: 99\n",
+      "Episode: 211 Epoch: 0\n",
+      "Episode: 211 Epoch: 254\n",
+      "Episode: 212 Epoch: 0\n",
+      "Episode: 212 Epoch: 79\n",
+      "Episode: 213 Epoch: 0\n",
+      "Episode: 213 Epoch: 1197\n",
+      "Episode: 214 Epoch: 0\n",
+      "Episode: 214 Epoch: 2402\n",
+      "Episode: 215 Epoch: 0\n",
+      "Episode: 215 Epoch: 402\n",
+      "Episode: 216 Epoch: 0\n",
+      "Episode: 216 Epoch: 539\n",
+      "Episode: 217 Epoch: 0\n",
+      "Episode: 217 Epoch: 209\n",
+      "Episode: 218 Epoch: 0\n",
+      "Episode: 218 Epoch: 912\n",
+      "Episode: 219 Epoch: 0\n",
+      "Episode: 219 Epoch: 78\n",
+      "Episode: 220 Epoch: 0\n",
+      "Episode: 220 Epoch: 147\n",
+      "Episode: 221 Epoch: 0\n",
+      "Episode: 221 Epoch: 310\n",
+      "Episode: 222 Epoch: 0\n",
+      "Episode: 222 Epoch: 610\n",
+      "Episode: 223 Epoch: 0\n",
+      "Episode: 223 Epoch: 83\n",
+      "Episode: 224 Epoch: 0\n",
+      "Episode: 224 Epoch: 187\n",
+      "Episode: 225 Epoch: 0\n",
+      "Episode: 225 Epoch: 616\n",
+      "Episode: 226 Epoch: 0\n",
+      "Episode: 226 Epoch: 42\n",
+      "Episode: 227 Epoch: 0\n",
+      "Episode: 227 Epoch: 1263\n",
+      "Episode: 228 Epoch: 0\n",
+      "Episode: 228 Epoch: 322\n",
+      "Episode: 229 Epoch: 0\n",
+      "Episode: 229 Epoch: 64\n",
+      "Episode: 230 Epoch: 0\n",
+      "Episode: 230 Epoch: 185\n",
+      "Episode: 231 Epoch: 0\n",
+      "Episode: 231 Epoch: 36\n",
+      "Episode: 232 Epoch: 0\n",
+      "Episode: 232 Epoch: 329\n",
+      "Episode: 233 Epoch: 0\n",
+      "Episode: 233 Epoch: 518\n",
+      "Episode: 234 Epoch: 0\n",
+      "Episode: 234 Epoch: 1262\n",
+      "Episode: 235 Epoch: 0\n",
+      "Episode: 235 Epoch: 73\n",
+      "Episode: 236 Epoch: 0\n",
+      "Episode: 236 Epoch: 213\n",
+      "Episode: 237 Epoch: 0\n",
+      "Episode: 237 Epoch: 163\n",
+      "Episode: 238 Epoch: 0\n",
+      "Episode: 238 Epoch: 514\n",
+      "Episode: 239 Epoch: 0\n"
      ]
     }
    ],
@@ -218,26 +640,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'datetime' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[39], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m datetime1 \u001b[39m=\u001b[39m datetime\u001b[39m.\u001b[39mcombine(datetime\u001b[39m.\u001b[39mtoday(), time_start)\n\u001b[1;32m      2\u001b[0m datetime2 \u001b[39m=\u001b[39m datetime\u001b[39m.\u001b[39mcombine(datetime\u001b[39m.\u001b[39mtoday(), time_end)\n\u001b[1;32m      4\u001b[0m \u001b[39m# calculate the difference between the datetime objects\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'datetime' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "datetime1 = datetime.combine(datetime.today(), time_start)\n",
     "datetime2 = datetime.combine(datetime.today(), time_end)\n",
     "\n",
     "# calculate the difference between the datetime objects\n",
-    "time_diff = (datetime2 - datetime1).total_seconds()\n",
-    "print(\"Total time taken for 500 episodes: {}\".format(time_diff))"
+    "time_diff = (datetime2 - datetime1).total_seconds()"
    ]
   },
   {
@@ -267,9 +676,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From observing the learning process, it may seem that sarsa lambda is not the ideal choice in this scenario. The rate of convergence is far inferior to that of the off policy Q-learning method evaluated previously. \n",
+    "From observing the learning process, it may seem that sarsa lambda is not the ideal choice in this scenario. The rate of convergence is far inferior to that of the off policy Q-learning method evaluated previously. Q-learning learns Q-values based on the optimal action, not the action sampled by the epsilon greedy policy. \n",
     "\n",
-    "On the other hand, this method seems to be outperforming the regular SARSA algorithm on this task. "
+    "The agent is definitely learning, but random spikes in number of epochs for an episode are indicative of some error. It could be that the agent is learning to favor certain action sequences due to the existence of traces, but the task itself is not the most sequential in nature. \n",
+    "\n",
+    "On the other hand, this method seems to be outperforming the regular SARSA algorithm on this task. \n",
+    "\n",
+    "Half way through training (250 episodes and 10 hours in), my laptop crashed which caused me to lose the stored progress. The gist of the plot that would have been was a gradually decaying curve that every few (10-15 episodes) would spike up to 1000+ steps for the episode"
    ]
   }
  ],
